@startuml Database

entity User {
  * id
  __
  * name
  * username
  * status
  * password
  __
  * role_id
}

entity Role {
  * id
  __
  * name
}

entity Customer {
  * id
  __
  * name
  * address
  * phone
  * npwp
}

entity Product {
  * id
  __
  * number
  * name
  * unit
  * profit
}

entity Supplier {
  * id
  __
  * name
  * address
  * phone
  * email
  * npwp
}

entity Purchase {
  * id
  __
  * number
  * status
  __
  * supplier_id
  * user_id
}

entity Sale {
  * id
  __
  * number
  * status
  __
  * customer_id
  * user_id
}

entity StockProduct {
  * id
  __
  * purchase_number
  * sale_number
  * qty
  __
  * product_number
}

entity Price {
  * id
  __
  * price
  __
  * product_number
  * customer_id
  * supplier_id
}

entity SaleDetail {
  * id
  __
  * price
  * ppn
  * qty
  __
  * sale_number
  * product_number
}

entity PurchaseDetail {
  * id
  __
  * price
  * ppn
  * qty
  __
  * purchase_number
  * product_number
}

entity Ppn {
  * id
  __
  * ppn
}

User ||--|{ Role
User }|--|| Purchase
User }|--|| Sale
Supplier }|--|| Purchase
Supplier ||--|| Price
Customer ||--|{ Sale
Customer ||--|| Price
Sale ||--|| SaleDetail
Sale ||--|| Price
Purchase }|--|| PurchaseDetail
Purchase ||--|| Price
Purchase ||--|{ StockProduct
SaleDetail ||--|{ Product
Sale ||--|{ StockProduct
PurchaseDetail ||--|{ Product
StockProduct ||--|{ Product
Product ||--|| Price